Update new code in repo

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
           <img src="./HTML Practise Assets/FES.svg" alt="" class="nav_logo" />
         </figure>
         <div class="navmenu_wrapper">
-          <a href="" class="nav_menu">About</a>
-          <a href="" class="nav_menu">Discord</a>
-          <a href="" class="nav_menu">Contact</a>
+          <a href="#about" class="nav_menu">About</a>
+          <a href="#discord" class="nav_menu">Discord</a>
+          <a href="#contact" class="nav_menu">Contact</a>
         </div>
       </nav>
 
       <header>
-        <div class="header_container">
+        <div class="header_container row">
           <div class="header_content">
             <h1>Best Place to learn Frontend</h1>
             <h3>
@@ -31,56 +31,94 @@
           </div>
 
           <figure class="header_image">
-            <img src="./HTML Practise Assets/laptop.png" alt="" />
+            <img
+              src="./HTML Practise Assets/laptop.png"
+              alt=""
+              class="header_laptop-image"
+            />
           </figure>
         </div>
       </header>
     </section>
 
     <main>
-        <section id="about">
-            <h2>About</h2>
-            <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed asperiores sit delectus dignissimos minima molestias unde iste aperiam. Minus modi et, soluta debitis rerum voluptatibus corrupti adipisci animi reiciendis quos?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore iusto fugit qui tempore alias, nihil praesentium repellat laborum at suscipit, fuga eius velit veritatis assumenda ullam cupiditate, sapiente facilis mollitia?</p>
+      <section id="about">
+        <div class="row">
+          <h2>About</h2>
+          <div class="section__description">
+            <div class="section__description-wrapper">
+              <p class="section__description-para">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed
+                asperiores sit delectus dignissimos minima molestias unde iste
+                aperiam. Minus modi et, soluta debitis rerum voluptatibus
+                corrupti adipisci animi reiciendis quos?
+              </p>
+              <p class="section__description-para">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore
+                iusto fugit qui tempore alias, nihil praesentium repellat
+                laborum at suscipit, fuga eius velit veritatis assumenda ullam
+                cupiditate, sapiente facilis mollitia?
+              </p>
             </div>
-            <figure>
-                <img src="./HTML Practise Assets/laptop.png" alt="">
+            <figure class="about__img-wrapper">
+              <img
+                src="./HTML Practise Assets/laptop.png"
+                alt=""
+                class="about__img"
+              />
             </figure>
-        </section>
+          </div>
+        </div>
+      </section>
 
-        <section id="discord">
-            <h2>Discord</h2>
-            <figure>
-                <img src="./HTML Practise Assets/discord.png" alt="Discord">
+      <section id="discord">
+        <div class="row">
+          <h2>Discord</h2>
+          <div class="section__description">
+            <figure class="about__img-wrapper">
+              <img
+                src="./HTML Practise Assets/discord.png"
+                alt="Discord"
+                class="about__img"
+              />
             </figure>
-            <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit tenetur voluptatum, ipsam commodi delectus modi voluptatem a, inventore vel quia quae odit dolorum molestias quos?</p>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis accusantium expedita quo rem soluta, facere labore nam aliquid quam, cum magnam fugit, mollitia molestiae unde?</p>
+            <div class="section__description-wrapper">
+              <p class="section__description-para">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit
+                tenetur voluptatum, ipsam commodi delectus modi voluptatem a,
+                inventore vel quia quae odit dolorum molestias quos?
+              </p>
+              <p class="section__description-para">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Facilis accusantium expedita quo rem soluta, facere labore nam
+                aliquid quam, cum magnam fugit, mollitia molestiae unde?
+              </p>
             </div>
-        </section>
+          </div>
+        </div>
+      </section>
 
-        <section id="contact">
-            <h2>Contact</h2>
-            <form action="">
-                <span>Email</span>
-                <input type="text" placeholder="pois@gmail.com">
-
-                <span>Message</span>
-                <textarea type="text" placeholder="pois@gmail.com"></textarea>
-                <button>Submit</button>
-            </form>
-        </section>
+      <section id="contact">
+        <h2>Contact</h2>
+        <form action="" class="contact_form">
+          <span>Email</span>
+          <input type="email" placeholder="pois@gmail.com" />
+          <span>Message</span>
+          <textarea type="text" placeholder="Input something here"></textarea>
+          <button class="contact__form-button">Submit</button>
+        </form>
+      </section>
     </main>
 
     <footer>
-        <img src="./HTML Practise Assets/FES.svg" alt="">
-        <div class="footer_menu">
-            <a href="#about">About</a>
-            <a href="#discord">Discord</a>
-            <a href="#contact">Contact</a>
-            <a href="">Courses</a>
-        </div>
+      <img src="./HTML Practise Assets/FES.svg" alt="" class="footer_logo" />
+      <div class="footer_menu">
+        <a href="#about" class="footer_link">About</a>
+        <a href="#discord" class="footer_link">Discord</a>
+        <a href="#contact" class="footer_link">Contact</a>
+        <a href="" class="footer_link">Courses</a>
+      </div>
+      <p>@Copyright Frontend Simplified</p>
     </footer>
   </body>
 </html>
